[tool.poetry]
name = "cipher_lyc2121"
version = "0.1.0"
description = "HW 7 Package"
authors = ["Lisa Carle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
